mudança de cores

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="overflow-x-auto mb-6">
                     <table class="min-w-full bg-accent-gold-light border border-brown-light">
                         <thead>
-                            <tr class="bg-brown-medium text-white">
+                            <tr class="bg-brown-medium bg-accent-gold-light">
                                 <th class="py-2 px-4 border-b border-brown-light text-left">Problema</th>
                                 <th class="py-2 px-4 border-b border-brown-light text-center">Gravidade (G)</th>
                                 <th class="py-2 px-4 border-b border-brown-light text-center">Urgência (U)</th>
@@ -310,7 +310,7 @@
                 <p class="mb-6 text-gray-700">A ferramenta 5W2H detalha um plano de ação respondendo a sete perguntas essenciais para solucionar um problema ou alcançar uma meta. Aqui, o objetivo é elevar a taxa de utilização da capacidade instalada de 46% para 70%.</p>
                 <div class="overflow-x-auto">
                     <table class="min-w-full bg-accent-gold-light border border-brown-light">
-                        <thead class="bg-brown-medium text-white">
+                        <thead class="bg-brown-medium bg-accent-gold-light">
                             <tr>
                                 <th class="py-2 px-4 border-b border-brown-light text-left">Pergunta</th>
                                 <th class="py-2 px-4 border-b border-brown-light text-left">Resposta</th>
